book/tests/snapshots/snapshot__run_display_reference_prql@queries__dialect-and-version-1.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/queries/dialect-and-version-1.prql
---
prql sql_dialect:mssql



from employees
sort age
take 10



