book/tests/snapshots/snapshot__run_display_reference_prql@queries__dialect_and_version-1.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/queries/dialect_and_version-1.prql
---
prql sql_dialect:mssql



from employees
sort age
take 10



