book/tests/snapshots/snapshot__run_display_reference_prql@queries__dialect_and_version-2.prql.snap
---
source: book/tests/snapshot.rs
expression: pl_of_prql(&prql).and_then(prql_of_pl).unwrap()
input_file: book/tests/prql/queries/dialect_and_version-2.prql
---
prql version:^0.3



from employees



