book/tests/snapshots/snapshot__run_display_reference_prql@queries__functions-1.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/queries/functions-1.prql
---
func interp higher x lower:0 -> x - lower / higher - lower



from students
derive [
  sat_proportion_1 = interp 1600 sat_score,
  sat_proportion_2 = interp lower:0 1600 sat_score,
]



