book/tests/snapshots/snapshot__run_display_reference_prql@queries__functions-2.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/queries/functions-2.prql
---
func interp higher x lower:0 -> x - lower / higher - lower



from students
derive [
  sat_proportion_1 = (
  sat_score
  interp 1600
),
  sat_proportion_2 = (
  sat_score
  interp lower:0 1600
),
]



