book/tests/snapshots/snapshot__run_display_reference_prql@queries__header-2.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/queries/header-2.prql
---
prql version:^0.3



from employees



