book/tests/snapshots/snapshot__run_display_reference_prql@queries__pipelines-1.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/queries/pipelines-1.prql
---
from employees
derive gross_salary = salary + payroll_tax



